--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="ABCD.jpg">
+    <link rel="icon" href="./assets/ABC12.jpg">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vyanktesh Dale </title>
@@ -18,8 +18,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 </head>
-
-
 
 <body>   
     
@@ -66,7 +64,7 @@
             <h2 class="title">About myself</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img id="imgsrc" src="xyz.jpg" width="3042" height="2024" alt="">
+                    <img id="imgsrc" src="./assets/xyz.jpg" width="3042" height="2024" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I am Vyanktesh Dale and iam a  <span class="typing-2"></span></div>
@@ -192,35 +190,35 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="adressbook.jpg" alt="">
+                        <img src="./assets/adressbook.jpg" alt="">
                         <div class="text">Address Book</div>
                         <p>This is an adress book applicaion</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="todo.png" alt="">
+                        <img src="./assets/todo.png" alt="">
                         <div class="text">Todo List</div>
                         <p>This is an todo list application</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="youtube.png" alt="">
+                        <img src="./assets/youtube.png" alt="">
                         <div class="text">YT Video Downloader</div>
                         <p>This is an YT Video Downloader application</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="face.jpg" alt="">
+                        <img src="./assets/face.jpg" alt="">
                         <div class="text">Face Recognition</div>
                         <p>This is an Face Recognition application</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="file.jpg" alt="">
+                        <img src="./assets/file.jpg" alt="">
                         <div class="text">File Manager</div> 
                         <p>This is an File Manager application</p>
                     </div>
