--- a/index.html
+++ b/index.html
@@ -292,11 +292,10 @@
     <footer>
         <span>Created by <a href="#">Vyanktesh Dale</a> <span class="fa fa-copyright"></span> 2022 All rights reserved</span>
         <div class="social">
-            <a href="www.linkedin.com/in/ 
-            vyanktesh-dale-1225b723b"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://www.linkedin.com/in/vyanktesh-dale-1225b723b/"><i class="fa fa-linkedin-square"></i></a>
             <a href="https://www.instagram.com/vyanktesh__1204/"><i class="fa fa-instagram"></i></a>
             <a href="https://github.com/Vyankteshdale"><i class="fa fa-github-square"></i></a>
-            <a href="https://twitter.com/ dale_Vyanktesh"><i class="fa fa-twitter-square"></i></a>
+            <a href="https://twitter.com/dale_vyanktesh"><i class="fa fa-twitter-square"></i></a>
 
         </div>
     </footer>          
